--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ requires-python = ">=3.12"
 dependencies = [
     "numpy>=2.3.5",
     "tensorflow>=2.20.0",
-    "torch>=2.9.1",
+    "tensorflow-datasets>=4.9.9",
+    "torch==2.8.0",
+    "torch-cluster>=1.6.3",
     "torch-geometric>=2.7.0",
     "tree>=0.2.4",
 ]
